2008-11-12  Jonathan Pryor  <jpryor@novell.com>

	* browser.cs: Probe for MonoWebBrowser before Gecko, as (1) Gecko is
	  effectively unmaintained, (2) Gecko doesn't work on my machine, and
	  (3) MonoWebBrowser suffers from neither (1) nor (2) (and it doubles
	  as using our own dogfood, which is even better).

2008-11-12  Andreia Gaita <shana@jitted.com> 

	* browser.cs: Update usage
	* MonoWebBrowserHtmlRender.cs: Fix click handling, first load, image loading

2008-10-28  Mike Kestner  <mkestner@novell.com>

	* docbrowser/Makefile.am: make admin.exe build conditional on GTKHTML.

2008-10-24  Jonathan Pryor  <jpryor@novell.com>

	* monodoc.in: Update messages to suggest the mdoc equivalents instead
	  of the older md* programs and/or remove functionality (e.g.
	  mdnormalize is no longer present, so don't call it).  Update the
	  --help text, removing all deprecated arguments and improving the
	  description of the TOPIC string.

2008-07-30  Andreia Gaita <avidigal@novell.com> 

	* browser.cs: Fix loader not to dump an exception when it a backend assembly 
	  doesn't exist. Change backend loading order.

2008-06-17  Andreia Gaita <avidigal@novell.com> 

	* browser.cs: Fix alternate engine loading so it tries every available
	  engine if the first one fails.
	
2008-06-15  Andreia Gaita <avidigal@novell.com> 

	* browser.cs: Uncomment exception message
	* WebKitHtmlRender.cs: Add missing return value. Add handler to
	  allowing monodoc to update the status bar on mouse hover.

2008-06-14  Andreia Gaita <avidigal@novell.com> 

	* WebKitHtmlRender.cs, browser.cs: Add Anchor, Copy and Print support

2008-06-14  Andreia Gaita <avidigal@novell.com> 

	* WebKitHtmlRender.cs: Enable link click events

2008-06-14  Andreia Gaita <avidigal@novell.com> 

	* browser.cs: Fix loader to not load all the backends. Instead, try
	  loading the selected engine, then the fallback if the first fails,
	  then any other available engine if the fallback fails (and then